--- a/Docker/index.html
+++ b/Docker/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>My Kubernetes Demo</h1>
-<p>A complete CICD with Jenkins pipeline jobs; Deployed on K8s Namespace : K8S_NAMESPACE_VALUE</p>
+<p>A complete CICD with Jenkins pipeline jobs</p>
+<p>Service version : RELEASE_VERSION_VALUE</p>
+<p>K8s Namespace : K8S_NAMESPACE_VALUE</p>
 </body>
 </html>
