--- a/Docker/index.html
+++ b/Docker/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body { background-color: lightgreen; }
+</style>
+</head>
 <body>
-<h1>My Kubernetes Demo From Repo : K8sDemo</h1>
+<h1>My Kubernetes Demo From Repo : K8sDemoGreen</h1>
 <p>A complete CICD with Jenkins pipeline jobs</p>
 <p>Service version : RELEASE_VERSION_VALUE</p>
 <p>K8s Namespace : K8S_NAMESPACE_VALUE</p>
