updating repo name

--- a/Docker/index.html
+++ b/Docker/index.html
@@ -6,9 +6,10 @@ body { background-color: lightgreen; }
 </style>
 </head>
 <body>
-<h1>My Kubernetes Demo From Repo : K8sDemoGreen</h1>
+<h1>My Kubernetes Demo From Repo : KubDemoGreen</h1>
 <p>A complete CICD with Jenkins pipeline jobs</p>
 <p>Service version : RELEASE_VERSION_VALUE</p>
+<p>Deployed Branch Name : REPO_BRANCH_NAME_VALUE</p>
 <p>K8s Namespace : K8S_NAMESPACE_VALUE</p>
 </body>
 </html>
